# frontendmcp

./: .prettierignore  LICENSE  PROTOCOL.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/anthropic/: README.md  anthropicExample.ts
examples/self-hosting/: README.md  selfHosted.ts
server/: README.md  index.ts  llm.ts
server/rust/: .gitignore  Cargo.toml  Dockerfile
server/rust/src/: main.rs
server/ts/: gemini.ts  index.js.map  index.ts  llm.js.map  llm.ts  package.json  pnpm-lock.yaml
src/: frontend-mcp-server.ts  frontendmcp-server.ts  frontendmcp-transport.ts  index.ts
src/mcp/: frontendmcp-server.ts  frontendmcp-transport.ts  websocket-relay-transport.ts
