[package]
name = "frontendmcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bytes = "1.11.1"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.8"
