[package]
name = "frontendmcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
async-stream = "0.3"
bytes = "1.11.1"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.8"
